# kiss-tools

./: .gitignore  DESIGN.md  NOTES.md  README.md  sample-bytecode.hex  vm.c
alloc/: README.md  build.sh  kiss-alloc.c  kiss-alloc.h  kiss-alloc_malloc.c  smoketest.c
asm/: .gitignore  README.md  asm.hs  asm.py  test.hex
gc/: compile_flags.txt  gc.c  gc.h
link/: .gitignore  asm.py  link.hs  link.sh  monoglot.sh  test.hex
lisp-hs/: CHANGELOG.md  kiss-lisp.cabal
lisp-hs/app/: Main.hs
vm/: Vm.hs  build.sh  kiss-bytecode.h  kiss-vm.h  test.c
vm/common/: vm.c
vm/cstdlib/: main.c
vm/examples/: 001-exit.hex  002-hello.hex  004-hello.hex  cat.hex
xc/: main.c  monoglot.sh
